syntax_analyzer.output
Grammar

    0 $accept: unit $end

    1 unit: multiline_command_list__opt

    2 multiline_command_list__opt: %empty
    3                            | multiline_command_list
    4                            | multiline_command_list command_list
    5                            | command_list

    6 multiline_command_list: line
    7                       | multiline_command_list line

    8 line: NEWL
    9     | command_list NEWL

   10 command_list: command_list_wo_semic
   11             | command_list_wo_semic SEMIC

   12 command_list_wo_semic: command
   13                      | command_list_wo_semic SEMIC command

   14 command: IDENTIFIER
   15        | command IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <string> (258) 14 15
    SEMIC (259) 11 13
    NEWL (260) 8 9


Nonterminals, with rules where they appear

    $accept (6)
        on left: 0
    unit <command_list> (7)
        on left: 1
        on right: 0
    multiline_command_list__opt <command_list> (8)
        on left: 2 3 4 5
        on right: 1
    multiline_command_list <command_list> (9)
        on left: 6 7
        on right: 3 4 7
    line <command_list> (10)
        on left: 8 9
        on right: 6 7
    command_list <command_list> (11)
        on left: 10 11
        on right: 4 5 9
    command_list_wo_semic <command_list> (12)
        on left: 12 13
        on right: 10 11 13
    command <command> (13)
        on left: 14 15
        on right: 12 13 15


State 0

    0 $accept: . unit $end

    IDENTIFIER  shift, and go to state 1
    NEWL        shift, and go to state 2

    $default  reduce using rule 2 (multiline_command_list__opt)

    unit                         go to state 3
    multiline_command_list__opt  go to state 4
    multiline_command_list       go to state 5
    line                         go to state 6
    command_list                 go to state 7
    command_list_wo_semic        go to state 8
    command                      go to state 9


State 1

   14 command: IDENTIFIER .

    $default  reduce using rule 14 (command)


State 2

    8 line: NEWL .

    $default  reduce using rule 8 (line)


State 3

    0 $accept: unit . $end

    $end  shift, and go to state 10


State 4

    1 unit: multiline_command_list__opt .

    $default  reduce using rule 1 (unit)


State 5

    3 multiline_command_list__opt: multiline_command_list .
    4                            | multiline_command_list . command_list
    7 multiline_command_list: multiline_command_list . line

    IDENTIFIER  shift, and go to state 1
    NEWL        shift, and go to state 2

    $default  reduce using rule 3 (multiline_command_list__opt)

    line                   go to state 11
    command_list           go to state 12
    command_list_wo_semic  go to state 8
    command                go to state 9


State 6

    6 multiline_command_list: line .

    $default  reduce using rule 6 (multiline_command_list)


State 7

    5 multiline_command_list__opt: command_list .
    9 line: command_list . NEWL

    NEWL  shift, and go to state 13

    $default  reduce using rule 5 (multiline_command_list__opt)


State 8

   10 command_list: command_list_wo_semic .
   11             | command_list_wo_semic . SEMIC
   13 command_list_wo_semic: command_list_wo_semic . SEMIC command

    SEMIC  shift, and go to state 14

    $default  reduce using rule 10 (command_list)


State 9

   12 command_list_wo_semic: command .
   15 command: command . IDENTIFIER

    IDENTIFIER  shift, and go to state 15

    $default  reduce using rule 12 (command_list_wo_semic)


State 10

    0 $accept: unit $end .

    $default  accept


State 11

    7 multiline_command_list: multiline_command_list line .

    $default  reduce using rule 7 (multiline_command_list)


State 12

    4 multiline_command_list__opt: multiline_command_list command_list .
    9 line: command_list . NEWL

    NEWL  shift, and go to state 13

    $default  reduce using rule 4 (multiline_command_list__opt)


State 13

    9 line: command_list NEWL .

    $default  reduce using rule 9 (line)


State 14

   11 command_list: command_list_wo_semic SEMIC .
   13 command_list_wo_semic: command_list_wo_semic SEMIC . command

    IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 11 (command_list)

    command  go to state 16


State 15

   15 command: command IDENTIFIER .

    $default  reduce using rule 15 (command)


State 16

   13 command_list_wo_semic: command_list_wo_semic SEMIC command .
   15 command: command . IDENTIFIER

    IDENTIFIER  shift, and go to state 15

    $default  reduce using rule 13 (command_list_wo_semic)
